@@ -1,17 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<!-- $Id -->
-<HTML><HEAD>
-<TITLE>SquirrelMail Documentation</TITLE>
-</HEAD>
-<BODY>
+<!-- $Id$ -->
+<html>
+<head>
+<title>SquirrelMail Documentation</title>
+</head>
+<body>
 
-<h2>SquirrelMail Documentation</h2>
-<p>
-Sorry for the lack of cohesion in the SquirrelMail documentation, but here is a conglomeration
+<h1>SquirrelMail Documentation</h1>
+
+<p>Sorry for the lack of cohesion in the SquirrelMail documentation, but here is a conglomeration
 of all the docs that we have accumulated so far.  Maybe some time in the future we will put
-together a good documentation system.  This is just meant to get you up and running.  If you find
-mistakes, please email them to <a href="luke@squirrelmail.org">luke@squirrelmail.org</a>.
-</p>
+together a good documentation system.  This is just meant to get you up and running.</p>
 
 
 <dl>
@@ -23,7 +22,7 @@ mistakes, please email them to <a href="luke@squirrelmail.org">luke@squirrelmail
 
   <dt><a href="translating_help.txt">Translating the Help System</a></dt>
    <dd>
-      We have a rather extensive help system in SquirrelMail now.  This document contains
+      We have a rather extensive help system in SquirrelMail. This document contains
       information about translating those help documents.
    </dd>
 
@@ -73,14 +72,14 @@ mistakes, please email them to <a href="luke@squirrelmail.org">luke@squirrelmail
 
    <dt>Basic documentation that comes with distrbution:</dt>
    <dd>
-      <a href="../AUTHORS">AUTHORS</a><br>
-      <a href="../INSTALL">INSTALL</a><br>
-      <a href="../UPGRADE">UPGRADE</a><br>
-      <a href="../README">README</a><br>
-      <a href="../COPYING">COPYING</a><br>
-      <a href="../ChangeLog">ChangeLog</a><br>
+      <a href="../AUTHORS">AUTHORS</a> - Who's behind all this?<br />
+      <a href="../INSTALL">INSTALL</a> - Installation instructions<br />
+      <a href="../UPGRADE">UPGRADE</a> - Upgrading instructions<br />
+      <a href="../README">README</a> - Everyone should read this.<br />
+      <a href="../COPYING">COPYING</a> - Licencing of SquirrelMail<br/>
+      <a href="../ChangeLog">ChangeLog</a> - Differences between SquirrelMail versions.<br />
    </dd>
 </dl>
 
-</BODY>
-</HTML>
+</body>
+</html>
